--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Hello World</h1>
     <a href="www.ur.edu.pl">Link do storny UR</a>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer mattis vulputate mauris, quis volutpat ipsum maximus a. Vestibulum rhoncus efficitur tincidunt. Sed semper quis massa pretium imperdiet. Aliquam non arcu lobortis est interdum facilisis. Mauris at ante dapibus, vulputate felis quis, consectetur libero. Vestibulum ut vulputate metus. Sed a ullamcorper ante. Sed id cursus mauris. In hac habitasse platea dictumst. Donec nec metus et lacus pulvinar facilisis id vitae felis. Cras blandit est a leo vulputate consequat. Etiam placerat velit et lectus euismod, eu posuere nisl tempus. Cras sollicitudin eros a ligula ornare volutpat. Etiam porttitor sem mauris, non tristique mauris feugiat in. Phasellus et tortor eget nisl aliquam fermentum.</p>
   </body>
 </html>
